infra/k8s/sprint-18-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1                                                                                          
kind: Ingress                                                                                                             
metadata:       
  name: runmatic-ingress
  namespace: default
  annotations: 
   nginx.ingress.kubernetes.io/rewrite-target: /api/$2
   nginx.ingress.kubernetes.io/use-regex: "true"
spec:                                                                              
  ingressClassName: nginx                                         
  rules:                                                                         
    - host: runmatic.local                                                                      
      http:               
        paths:
          - path: /v2/api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:                                                                                                      
              service:
                name: api-service                                                        
                port:                                                 
                  number: 8000                                                                                            
          - path: /           
            pathType: Prefix                                                                                              
            backend:        
              service:                                                                                                    
                name: frontend-service
                port:                                                                                                     
                  number: 3000
